staging french translation

--- a/docs/locale/fr/LC_MESSAGES/about/credits.po
+++ b/docs/locale/fr/LC_MESSAGES/about/credits.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,6 +35,14 @@ msgid ""
 "(`Open Data Services <https://www.opendataservices.coop>`_) and input from "
 "the :doc:`data standard working group <governance>`."
 msgstr ""
+"La version bêta de la norme relative aux données sur la propriété effective "
+"a été rédigée par Tim Davies (`Open Data Services "
+"<https://www.opendataservices.coop>`_) en collaboration avec Ben Symonds "
+"(`OpenCorporates <https://www.opencorporates.com>`_), Chris Taggart "
+"(`OpenCorporates <https://www.opencorporates.com>`_) et Jack Lord (`Open "
+"Data Services <https://www.opendataservices.coop>`_), et avec la "
+"contribution du :doc:`groupe de travail sur la norme relative aux données "
+"<governance>`."
 
 #: ../../about/credits.rst:11 5851332e903f448ea4f2860614ef0b74
 msgid ""
@@ -43,6 +52,12 @@ msgid ""
 "(`Open Data Services <https://www.opendataservices.coop>`_) and input from "
 "the :doc:`data standard working group <governance>`."
 msgstr ""
+"La version 0.1 a été rédigée par Tim Davies et Jack Lord à l'aide de la "
+"documentation de Kadie Armstrong (`Open Data Services "
+"<https://www.opendataservices.coop>`__), du travail technique de James "
+"Baster (`Open Data Services <https://www.opendataservices.coop>`_) et de la "
+"contribution du :doc:`groupe de travail sur la norme relative aux données "
+"<governance>`."
 
 #: ../../about/credits.rst:16 b1c0f3c0d29545a0a5ec83931459b8b5
 msgid ""
@@ -52,6 +67,12 @@ msgid ""
 " Data Services <https://www.opendataservices.coop>`_) and input from the "
 ":doc:`data standard working group <governance>`."
 msgstr ""
+"La version 0.2 a été rédigée par Jack Lord, Simon Whitehouse et Kadie "
+"Armstrong (`Open Data Services <https://www.opendataservices.coop>`__), avec"
+" le travail technique de James Baster, Ben Webb, Amy Guy et David Raznick "
+"(`Open Data Services <https://www.opendataservices.coop>`_) et la "
+"contribution du :doc:`groupe de travail sur la norme relative aux données "
+"<governance>`."
 
 #: ../../about/credits.rst:20 deae4979c5354c81bbdcc4c50423ea5a
 msgid ""
@@ -61,6 +82,12 @@ msgid ""
 "(`Open Data Services <https://www.opendataservices.coop>`_) and input from "
 "the data standard working group."
 msgstr ""
+"La version 0.3 a été rédigée par Kadie Armstrong, Jack Lord, Simon "
+"Whitehouse et Emma Howard (`Open Data Services "
+"<https://www.opendataservices.coop>`__), avec le travail technique de James "
+"Baster, Ben Webb, Amy Guy et David Raznick (`Open Data Services "
+"<https://www.opendataservices.coop>`_) et la contribution du groupe de "
+"travail sur la norme relative aux données."
 
 #: ../../about/credits.rst:22 2bac5154fe48421db3cbd976f2fab2ae
 msgid ""
@@ -70,3 +97,9 @@ msgid ""
 " Ed Lloyd-Davies (`Open Data Services <https://www.opendataservices.coop>`_)"
 " and input from the data standard working group."
 msgstr ""
+"La version 0.4 a été rédigée par Kadie Armstrong, Emma Howard, Kathryn "
+"Irish, Rachel Vint et Lewis Spurgin (`Open Data Services "
+"<https://www.opendataservices.coop>`_), avec le travail technique d'Amy Guy "
+"et Ed Lloyd-Davies (`Open Data Services "
+"<https://www.opendataservices.coop>`_) et la contribution du groupe de "
+"travail sur la norme relative aux données."
