--- a/docs/locale/fr/LC_MESSAGES/primer/index.po
+++ b/docs/locale/fr/LC_MESSAGES/primer/index.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../../primer/index.rst:5 6833e97867ce467886812fe0dcbd3f41
 msgid "Primer"
-msgstr ""
+msgstr "Introduction"
 
 #: ../../primer/index.rst:8 87495a0b09754fa6a69e832dc01d6477
 msgid "What is beneficial ownership?"
@@ -36,10 +36,10 @@ msgid ""
 " corporate vehicle, or the ability to control or benefit from its "
 "activities."
 msgstr ""
-"Un bénéficiaire effectif est une personne physique qui possède des intérêts,"
-" directs ou indirects, leur conférant le droit à une partie des revenus ou "
-"des actifs d'une structure sociétaire, ou la capacité de contrôler ou de "
-"tirer profit de ses activités."
+"Un bénéficiaire effectif est une personne physique qui détient une "
+"participation, directe ou indirecte, lui conférant le droit à une partie des"
+" revenus ou des actifs d'une structure sociétaire, ou la capacité de "
+"contrôler ou de tirer profit de ses activités."
 
 #: ../../primer/index.rst:12 6148bb7a872b49dd93f8dbc2ecc47185
 msgid ""
@@ -62,9 +62,9 @@ msgid ""
 "relationship with it."
 msgstr ""
 "Bien que les entités possèdent souvent d'autres entités, les personnes "
-"apparaissent presque toujours en bout de réseau de propriété effective. Ce "
-"sont elles qui profitent en dernier ressort des succès financiers de "
-"l'entité, en raison de leur relation."
+"apparaissent presque toujours en bout du réseau des bénéficiaires effectifs."
+" Ce sont elles qui profitent en dernier ressort des succès financiers de "
+"l'entité, du fait de leur relation."
 
 #: ../../primer/index.rst:16 930b088e3305425683ed9cb64460ec4b
 msgid ""
@@ -76,14 +76,14 @@ msgid ""
 "financing a new political party, and law enforcement can’t fight money "
 "laundering and other cross-border financial crimes."
 msgstr ""
-"Les réseaux de propriété effective reliés aux entités peuvent être complexes"
-" et opaques. Cela signifie que l'identité des personnes qui possèdent, "
-"contrôlent ou tirent profit d'entités peut rester cachée. Lorsque les "
-"bénéficiaires effectifs sont cachés, les gouvernements ne sont pas en mesure"
-" de savoir qui soumissionne pour un contrat, les sociétés ignorent avec qui "
-"elles font affaires, la société ne sait pas qui finance un nouveau parti "
-"politique et la police ne peut pas lutter contre le blanchiment d'argent ou "
-"la criminalité financière transfrontalière."
+"Les réseaux des bénéficiaires effectifs reliés aux entités peuvent être "
+"complexes et opaques. Cela signifie que l'identité des personnes qui "
+"possèdent, contrôlent ou tirent profit d'entités peut rester cachée. Lorsque"
+" les bénéficiaires effectifs sont cachés, les gouvernements ne sont pas en "
+"mesure de savoir qui soumissionne pour un contrat, les sociétés ignorent "
+"avec qui elles font affaires, la société ne sait pas qui finance un nouveau "
+"parti politique et la police ne peut pas lutter contre le blanchiment "
+"d'argent ou la criminalité financière transfrontalière."
 
 #: ../../primer/index.rst-1 c3b77235c13740c893eaa83811dfcbc2
 msgid ""
@@ -97,16 +97,17 @@ msgid ""
 "dotted line. Person 1 is labelled 'Beneficial owner'. Company A is labelled "
 "'Intermediary entity'."
 msgstr ""
-"Diagramme étiqueté d'un réseau de propriété effective. La Société E est "
-"étiquetée comme 'Sujet du réseau de propriété effective'. Une ligne continue"
-" reliée à la Personne 2 est étiquetée 'Relation directe'. Le texte 'taux de "
+"Diagramme étiqueté d'un réseau de bénéficiaires effectifs. La Société E est "
+"étiquetée 'Sujet du réseau de bénéficiaires effectifs'. Une ligne continue "
+"reliée à la Personne 2 est étiquetée 'Relation directe'. Le texte 'taux de "
 "détention d'actions de 32 %' situé sur cette ligne continue est étiqueté "
-"'Intérêt'. La Société E est également reliée à la Société A par une ligne "
-"continue. La Société A est reliée à la Personne 1 par une ligne continue. "
-"Une ligne en pointillés reliant la Société E et la Personne 1 est étiquetée "
-"'Relation indirecte'. Le texte 'taux de détention d'actions de 45 %' est "
-"situé sur cette ligne en pointillés. La Personne 1 est étiquetée "
-"'Bénéficiaire effectif'. La Société A est étiquetée 'Entité intermédiaire'."
+"'Participation au capital'. La Société E est également reliée à la Société A"
+" par une ligne continue. La Société A est reliée à la Personne 1 par une "
+"ligne continue. Une ligne en pointillés reliant la Société E et la Personne "
+"1 est étiquetée 'Relation indirecte'. Le texte 'taux de détention d'actions "
+"de 45 %' est situé sur cette ligne en pointillés. La Personne 1 est "
+"étiquetée 'Bénéficiaire effectif'. La Société A est étiquetée 'Entité "
+"intermédiaire'."
 
 #: ../../primer/index.rst:23 ebc684a01c7f4255b3f758b37ac86ec9
 msgid ""
@@ -129,6 +130,17 @@ msgid ""
 "which means they benefit from the activities of an entity - for example, "
 "where they can enjoy and use assets owned by the entity."
 msgstr ""
+"Lorsqu'une personne détient quelque chose, elle y exerce généralement un "
+"certain contrôle. La détention d'actions dans une société peut conférer des "
+"droits de vote, notamment. Néanmoins, la propriété et le contrôle sont "
+"parfois séparés (par des catégories d'actions, des contrats, des accords et "
+"d'autres mécanismes). Par exemple, un directeur exécutif pourrait avoir le "
+"droit de nommer 60 % des autres membres du conseil d'administration, malgré "
+"sa faible participation dans l'entreprise. Par ailleurs, dans certains cas, "
+"une personne peut ne pas avoir de propriété ou de contrôle significatif, "
+"mais avoir une relation, ce qui signifie qu'elle profite des activités d'une"
+" entité ; par exemple, lorsqu'elle profite et utilise les actifs de "
+"l'entité."
 
 #: ../../primer/index.rst:27 2c1fc5e43a3c4935ba18ab31508654c6
 msgid ""
@@ -138,9 +150,9 @@ msgid ""
 "<https://www.openownership.org/en/research/>`_, visit `the Open Ownership "
 "website. <https://www.openownership.org/en/>`_"
 msgstr ""
-"Pour plus d'`informations sur la transparence de la propriété effective "
+"Pour plus d'`informations sur la transparence des bénéficiaires effectifs "
 "<https://www.openownership.org/en/about/what-is-beneficial-ownership-"
-"transparency/>`_ et pour lire `la dernière recherche "
+"transparency/>`_ et pour lire `la recherche la plus récente "
 "<https://www.openownership.org/en/research/>`_, consultez `le site Internet "
 "d'Open Ownership. <https://www.openownership.org/en/>`_"
 
@@ -156,6 +168,11 @@ msgid ""
 " ownership information. This is based on the :any:`key concepts <key-"
 "concepts>` which underpin beneficial ownership."
 msgstr ""
+"La norme relative aux données sur la propriété effective (BODS, en anglais) "
+"établit un format de données structurées, ainsi que les exigences associées,"
+" afin de représenter et de publier des informations sur les bénéficiaires "
+"effectifs. Ce format repose sur les :any:`concepts clés <key-concepts>` de "
+"la propriété effective."
 
 #: ../../primer/index.rst:37 a7b7e68d34e5432f8249321d3c2327c9
 msgid "Within BODS:"
@@ -167,6 +184,10 @@ msgid ""
 "shared. It can also inform the design of data collection and management "
 "systems. A format called JSON can be used to publish BODS data."
 msgstr ""
+"Le :any:`schéma des données <schema-reference>` décrit quelles données "
+"devraient être communiquées. Il peut également éclairer la conception de "
+"systèmes de collecte et de gestion des données. Un format appelé JSON peut "
+"être utilisé pour publier des données de la BODS."
 
 #: ../../primer/index.rst:40 df4b6cefa25243369e90c9e25047ae6b
 msgid ""
@@ -174,6 +195,9 @@ msgid ""
 "information should be represented and managed to conform with the data "
 "standard."
 msgstr ""
+"Les :any:`sections des exigences <data-standard-index>` indiquent comment "
+"représenter et gérer les informations, conformément à la norme relative aux "
+"données."
 
 #: ../../primer/index.rst:42 04954b3cee6145ebb0157288256a42b7
 msgid ""
@@ -182,22 +206,33 @@ msgid ""
 "and-interoperable-beneficial-ownership-data/benefits-of-structured-and-"
 "interoperable-data/>`_:"
 msgstr ""
+"La collecte, la communication et l'utilisation des informations sur les "
+"bénéficiaires effectifs en tant que `données structurées "
+"<https://www.openownership.org/en/publications/structured-and-interoperable-"
+"beneficial-ownership-data/benefits-of-structured-and-interoperable-data/>`_ "
+":"
 
 #: ../../primer/index.rst:44 9fec528bcc7d4f4980fa4127e6d0a2a1
 msgid "improves the interoperability of beneficial ownership information"
 msgstr ""
+"améliorent l'interopérabilité des informations sur les bénéficiaires "
+"effectifs ;"
 
 #: ../../primer/index.rst:45 111e06b9ddf34970a75fa8a4ce40c5ce
 msgid ""
 "reduces the cost of producing, using, and maintaining beneficial ownership "
 "information"
 msgstr ""
+"réduisent le coût de production, d'utilisation et de conservation des "
+"informations sur les bénéficiaires effectifs ;"
 
 #: ../../primer/index.rst:46 45f1c737d57542f3baa5dfb46b66c203
 msgid ""
 "has a greater chance of meeting beneficial ownership transparency policy "
 "goals than unstructured data"
 msgstr ""
+"sont plus susceptibles d'atteindre les objectifs de la politique relative à "
+"la transparence des bénéficiaires effectifs que les données non structurées."
 
 #: ../../primer/index.rst:48 94d197b37ec04c33b6dbea769515157d
 msgid ""
@@ -205,6 +240,9 @@ msgid ""
 "sources can be expensive and time-consuming, making it more difficult to "
 "understand beneficial ownership networks."
 msgstr ""
+"Faute de normes communes, la combinaison et l'analyse des données provenant "
+"de diverses sources peuvent être longues et coûteuses, ce qui complique la "
+"compréhension des réseaux des bénéficiaires effectifs."
 
 #: ../../primer/index.rst:50 0e60da8eb47541de90e0bf0333a914cf
 msgid "BODS allows publishers to provide statements that describe:"
@@ -216,11 +254,11 @@ msgstr "des détails sur les personnes physiques et les entités ;"
 
 #: ../../primer/index.rst:53 26ced1dcb94d48348867f2cfc677e194
 msgid "identifiers for natural persons and entities"
-msgstr "les identificateurs des personnes physiques et des entités ;"
+msgstr "les identifiants des personnes physiques et des entités ;"
 
 #: ../../primer/index.rst:54 9e4940ea905a4ef3b5260f901ddf45c8
 msgid "types of interests that can be held in entities"
-msgstr "les types d'intérêts pouvant être détenus dans des entités ;"
+msgstr "les types de participation pouvant être détenus dans des entités ;"
 
 #: ../../primer/index.rst:55 c3ac6f997cfb460e9d864dedced8033c
 msgid "provenance information"
@@ -233,3 +271,4 @@ msgstr "des informations historiques et actuelles ;"
 #: ../../primer/index.rst:57 36ce93dfa61345bfad832b20ca27a6da
 msgid "placeholders, when information must be witheld"
 msgstr ""
+"des espaces réservés, si des informations ne doivent pas être divulguées."
