--- a/docs/locale/fr/LC_MESSAGES/standard/index.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/index.po
@@ -23,16 +23,16 @@ msgstr ""
 
 #: ../../standard/index.rst:4 8e0e94723def475189c4cc3f07c60056
 msgid "Data Standard"
-msgstr ""
+msgstr "Norme relative aux données"
 
 #: ../../standard/warningbox.rst:3 812b3c86712b44419d3c59a7868f99b3
 msgid ""
 "This is v0.4 of the Beneficial Ownership Data Standard. It includes updates "
 "to the data model, codelists, and technical guidance."
 msgstr ""
-"Ceci est la v.04 de la norme de données sur la propriété effective "
-"comprenant des mises à jour du modèle de données, des listes de codes et des"
-" orientations techniques."
+"Ceci est la v.04 de la norme relative aux données sur la propriété effective"
+" comprenant des mises à jour du modèle de données, des listes de codes et "
+"des orientations techniques."
 
 #: ../../standard/warningbox.rst:5 03cfc2fe72804401bf8f97f2d9e66445
 msgid ""
@@ -40,9 +40,9 @@ msgid ""
 ":ref:`Changelog <changelog>` and `About <../about>`_ pages for more "
 "information."
 msgstr ""
-"Des modifications ultérieures sont anticipées avant la version 1.0. Voir les"
-" pages :ref:`Changelog <changelog>` et `About <../about>`_ pages pour plus "
-"d'informations."
+"Des modifications ultérieures sont prévues avant le lancement de la version "
+"1.0. Voir les pages :ref:`Journal des modifications <changelog>` et `À "
+"propos <../about>`_ pour plus d'informations."
 
 #: ../../standard/index.rst:8 4e1c4392abb3427c9bfc9168024862f5
 msgid ""
@@ -51,6 +51,10 @@ msgid ""
 "information. The data model is based on :any:`key concepts <key-concepts>` "
 "relating to this information and its management."
 msgstr ""
+"Les données de la BODS contiennent des informations sur la :doc:`propriété "
+"effective <../primer/index>` des structures sociétaires afin de faciliter "
+"l'échange d'informations. Le modèle de données repose sur des :any:`concepts"
+" clés <key-concepts>` concernant ces informations et leur gestion."
 
 #: ../../standard/index.rst:10 fa0b59d362ca435e8f2df2b5dc8b2645
 msgid ""
@@ -60,6 +64,12 @@ msgid ""
 ":ref:`Schema reference <schema-reference>` includes an A-Z of objects, "
 "detailing their properties and related codelists."
 msgstr ""
+"Le schéma de la BODS, défini à l'aide du `Schéma JSON 12-2020 <https://json-"
+"schema.org/>`_, décrit le modèle de données. Le :ref:`Navigateur du schéma "
+"<schema-browser>` présente l'imbrication des objets et des propriétés du "
+"schéma. La :ref:`Référence du schéma <schema-reference>` inclut un guide de "
+"A à Z des objets qui détaille leurs propriétés et les listes de codes "
+"associées."
 
 #: ../../standard/index.rst:12 77c800c5324f4ceb9964d7ae270f59e9
 msgid ""
@@ -67,3 +77,6 @@ msgid ""
 "<modelling-requirements>` and :ref:`System requirements <system-"
 "requirements>` sections."
 msgstr ""
+"D'autres exigences sont décrites dans les sections :ref:`Exigences relatives"
+" à la modélisation <modelling-requirements>` et :ref:`Exigences relatives "
+"aux systèmes <system-requirements>`."
