--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-nominations.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/repr-nominations.po
@@ -3,6 +3,11 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Katia Da Silva, 2024
+# Cécile Guarin, 2024
+# Rachel Vint, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,12 +26,12 @@ msgstr ""
 #: ../../standard/modelling/repr-nominations.rst:4
 #: 643ad864beae4cada1d33d909764e4b2
 msgid "Representing nominee arrangements"
-msgstr ""
+msgstr "Représentation des constructions juridiques de mandataires"
 
 #: ../../standard/modelling/repr-nominations.rst:7
 #: 609eaad53d114500970aff0a2a36e7a3
 msgid "Overview"
-msgstr ""
+msgstr "Aperçu"
 
 #: ../../standard/modelling/repr-nominations.rst:8
 #: e84980e77c524721b01379b462247a1e
@@ -34,6 +40,9 @@ msgid ""
 "nominator) instructs the other (the nominee) to act on their behalf in a "
 "specified capacity."
 msgstr ""
+"Une construction juridique de mandataires est un accord conclu entre des "
+"parties selon lequel l'une (le mandant) charge l'autre (le mandataire) "
+"d'agir en son nom dans une certaine capacité."
 
 #: ../../standard/modelling/repr-nominations.rst:10
 #: 9b7977cd6fce443da87c6d94445499b5
@@ -42,21 +51,27 @@ msgid ""
 "nominee arrangements. Nominee arrangements are represented by an Entity "
 "Statement."
 msgstr ""
+"La norme BODS peut être utilisée pour représenter la propriété effective des"
+" entités par le biais de constructions juridiques de mandataires. Ces "
+"dernières sont représentées par une déclaration d'entité."
 
 #: ../../standard/modelling/repr-nominations.rst:12
 #: c8e51c408f3b4a71bb8c417f9945dcb3
 msgid "When representing nominee arrangements:"
 msgstr ""
+"Lors de la représentation des constructions juridiques de mandataires :"
 
 #: ../../standard/modelling/repr-nominations.rst:14
 #: caf402f733a9400eb5bc86565aceebbc
 msgid "The ``entityType.type`` MUST be ``arrangement``"
 msgstr ""
+"le champ ``entityType.type`` doit être configuré sur ``arrangement`` ;"
 
 #: ../../standard/modelling/repr-nominations.rst:15
 #: de426324db8a424ca4a6408d3afd043f
 msgid "``entityType.subtype`` MUST be ``nomination``"
 msgstr ""
+"le champ ``entityType.subtype`` doit être configuré sur ``nomination`` ;"
 
 #: ../../standard/modelling/repr-nominations.rst:16
 #: 7d7e98906ed44850b3f78d0e748d46dd
@@ -64,6 +79,8 @@ msgid ""
 "``entityType.details`` MAY be used to give a local name or specify the type "
 "of nominee arrangement"
 msgstr ""
+"le champ ``entityType.details`` peut être utilisé pour donner un nom local "
+"ou préciser le type de construction juridique de mandataires."
 
 #: ../../standard/modelling/repr-nominations.rst:18
 #: 0bfa300f35c14a609a9703d57179eda4
@@ -71,16 +88,19 @@ msgid ""
 "Relationships between nominee arrangements and their parties MUST be "
 "represented using only these ``interest.type`` codes:"
 msgstr ""
+"Les relations entre les constructions juridiques de mandataires et leurs "
+"parties doivent être représentées uniquement à l'aide des codes "
+"``interest.type`` suivants :"
 
 #: ../../standard/modelling/repr-nominations.rst:20
 #: 1b9fb34d62f6434a9b13c7c1f9320554
 msgid "``nominator``"
-msgstr ""
+msgstr "``nominator`` ;"
 
 #: ../../standard/modelling/repr-nominations.rst:21
 #: c1e1a53f337041d887c0f7ca5a0c2911
 msgid "``nominee``"
-msgstr ""
+msgstr "``nominee``."
 
 #: ../../standard/modelling/repr-nominations.rst:23
 #: b0434053d20d4ff08074ad90228bd7ae
@@ -88,16 +108,18 @@ msgid ""
 "``interest.details`` MAY be used to give a local name (e.g. \"agent\" or "
 "\"principal\")"
 msgstr ""
+"Le champ ``interest.details`` peut être utilisé pour donner un nom local "
+"(par exemple, \"agent\" ou \"principal\")."
 
 #: ../../standard/modelling/repr-nominations.rst:26
 #: 3ff681a7131445fead2d0940a3bb9320
 msgid "Examples"
-msgstr ""
+msgstr "Exemples"
 
 #: ../../standard/modelling/repr-nominations.rst:29
 #: f9229f6bd3ec40ffba50b32bd3a3ea4e
 msgid "Nominee directorship"
-msgstr ""
+msgstr "Direction de mandataire"
 
 #: ../../standard/modelling/repr-nominations.rst:30
 #: 3b4c2d4820fe4992bffc6488ecefdb3e
@@ -107,6 +129,10 @@ msgid ""
 "statements needed to represent the indirect beneficial ownership of the "
 "parties."
 msgstr ""
+"Deux personnes concluent une construction juridique de direction de "
+"mandataire pour une entreprise donnée. Les lignes en pointillés représentent"
+" les déclarations de relation requises pour représenter la propriété "
+"effective indirecte des parties."
 
 #: ../../standard/modelling/repr-nominations.rst:32
 #: 3bfe2de7e48c44b38a4b7e2c4ff4eb2e
@@ -114,6 +140,8 @@ msgid ""
 "See :ref:`representing-bo` for guidance on representing indirect beneficial "
 "ownership."
 msgstr ""
+"Consultez la page :ref:`representing-bo` pour obtenir des conseils sur la "
+"représentation de la propriété effective indirecte."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: dbea8b48a2a341b7b50f53dae1bf09f3
@@ -130,11 +158,28 @@ msgid ""
 "the registered entity. The interest type for this relationship statement is "
 "'other influence or control'."
 msgstr ""
+"Schéma représentant les déclarations reliées. La déclaration d'entité "
+"contient le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
+" de la construction juridique est reliée à une déclaration de personne par "
+"une déclaration de relation avec le type de participation au capital "
+"configuré sur 'nominator' (mandant) et à une deuxième déclaration de "
+"personne par une déclaration de relation avec le type de participation au "
+"capital configuré sur 'nominee' (mandataire. Une seconde déclaration "
+"d'entité avec le type \"Registered entity\" est reliée à l'entité de "
+"construction juridique par une déclaration de relation avec le type de "
+"participation au capital configuré sur 'board member' (membre du conseil "
+"d'administration). Il existe également une déclaration de relation entre la "
+"première déclaration de personne et l'entité immatriculée afin de "
+"représenter un des bénéficiaires effectifs en dernière analyse de l'entité "
+"immatriculée. Le type de participation au capital pour cette déclaration de "
+"relation est configuré sur 'other influence or control' (autre influence ou "
+"contrôle)."
 
 #: ../../standard/modelling/repr-nominations.rst:40
 #: 84a81e261d954293be243501f33c4c3c
 msgid "Nominee shareholding"
-msgstr ""
+msgstr "Détention d'actions de mandataires"
 
 #: ../../standard/modelling/repr-nominations.rst:41
 #: 15a51de398a7456bb102f08549903847
@@ -142,6 +187,9 @@ msgid ""
 "Two people enter into a nominee shareholding arrangement for a company, and "
 "all details are known."
 msgstr ""
+"Deux personnes signent une construction juridique de détention d'actions de "
+"mandataires pour une entreprise donnée. Toutes les informations sont "
+"connues."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: ca685775d94f424a9c61411396ab13be
@@ -154,11 +202,22 @@ msgid ""
 "\"Registered entity\" is connected to the arrangement entity by a "
 "relationship statement with interest type 'shareholding'."
 msgstr ""
+"Schéma représentant les déclarations reliées. La déclaration d'entité "
+"contient le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
+" de la construction juridique est reliée à une déclaration de personne par "
+"une déclaration de relation avec le type de participation au capital "
+"configuré sur 'nominator' (mandant) et à une deuxième déclaration de "
+"personne par une déclaration de relation avec le type de participation au "
+"capital configuré sur 'nominee' (mandataire). Une seconde déclaration "
+"d'entité avec le type \"Registered entity\" est reliée à l'entité de "
+"construction juridique par une déclaration de relation avec le type de "
+"participation au capital configuré sur 'shareholding' (détention d'actions)."
 
 #: ../../standard/modelling/repr-nominations.rst:50
 #: 0965456d67794250aa1b7eabdd2fa5f1
 msgid "Entity as a nominee"
-msgstr ""
+msgstr "Entité mandataire"
 
 #: ../../standard/modelling/repr-nominations.rst:51
 #: 79e97f94b8fe4d618771b517cabe4ab0
@@ -166,6 +225,8 @@ msgid ""
 "A person enters into a nominee shareholding arrangement for a company, and "
 "the nominee is an entity."
 msgstr ""
+"Une personne signe une construction juridique de détention d'actions de "
+"mandataires avec une entreprise donnée. Le mandataire est une entité."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: 52e7a71efd07469394c4886ee4fd3a62
@@ -179,11 +240,23 @@ msgid ""
 "arrangement entity by a relationship statement with interest type "
 "'shareholding'."
 msgstr ""
+"Schéma représentant les déclarations reliées. La déclaration d'entité "
+"contient le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
+" de la construction juridique est reliée à une déclaration de personne par "
+"une déclaration de relation avec le type de participation au capital "
+"configuré sur 'nominator' (mandant) et à une deuxième déclaration d'entité "
+"avec le type d'entité configuré sur 'registered entity' (entité "
+"immatriculée) par une déclaration de relation avec le type de participation "
+"au capital configurée sur 'nominee' (mandataire). Une troisième déclaration "
+"d'entité avec le type \"Registered entity\" est reliée à l'entité de la "
+"construction juridique par une déclaration de relation avec le type de "
+"participation au capital configuré sur 'shareholding' (détention d'actions)."
 
 #: ../../standard/modelling/repr-nominations.rst:59
 #: 322ceee5240e402b813811da5b148156
 msgid "Unknown nominator"
-msgstr ""
+msgstr "Mandant inconnu"
 
 #: ../../standard/modelling/repr-nominations.rst:60
 #: c834166730c24496a6b1876c10cd0d23
@@ -191,6 +264,9 @@ msgid ""
 "Two people enter into a nominee directorship arrangement for a company and "
 "details for the nominator are required to be disclosed, but are unknown."
 msgstr ""
+"Deux personnes signent une construction juridique de détention d'actions de "
+"mandataires avec une entreprise donnée. Les informations sur le mandant "
+"doivent être divulguées, mais sont inconnues."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: f28642d4cabb4a61be392b5d4d67cadd
@@ -206,11 +282,27 @@ msgid ""
 "arrangement entity by a relationship statement with interest type 'board "
 "member'."
 msgstr ""
+"Schéma représentant les déclarations reliées. La déclaration d'entité "
+"contient le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
+" de la construction juridique est reliée à une déclaration de personne avec "
+"le type de personne configuré sur 'unknown person' (personne inconnue) et le"
+" motif sur 'subject unable to confirm or identify beneficial owner' (sujet "
+"incapable de confirmer ou d'identifier le bénéficiaire effectif) pour le "
+"champ unspecifiedPersonDetails par une déclaration de relation avec le type "
+"de participation au capital configuré sur 'nominator' (mandant). L'entité de"
+" la construction juridique est également reliée à une deuxième déclaration "
+"de personne par une déclaration de relation avec le type de participation au"
+" capital configuré sur 'nominee' (mandataire). Une deuxième déclaration "
+"d'entité avec le type \"Registered entity\" est reliée à l'entité de la "
+"construction juridique par une déclaration de relation avec le type de "
+"participation au capital configuré sur 'board member' (membre de conseil "
+"d'administration)."
 
 #: ../../standard/modelling/repr-nominations.rst:68
 #: a7db5c26811045cc9e32f628f197f60c
 msgid "Nominator not required to disclose"
-msgstr ""
+msgstr "Mandant sans obligation de déclaration"
 
 #: ../../standard/modelling/repr-nominations.rst:69
 #: 2665c686d57d498380666174c174c22c
@@ -218,6 +310,9 @@ msgid ""
 "Two people enter into a nominee directorship arrangement for a company, and "
 "details for the nominator are not required to be disclosed."
 msgstr ""
+"Deux personnes signent une construction juridique de détention d'actions de "
+"mandataires avec une entreprise donnée. Il n'est pas exigé que les "
+"informations sur le mandant soient divulguées."
 
 #: ../../standard/modelling/repr-nominations.rst-1
 #: ad71c0cd1354430bb5007b749788eb1c
@@ -229,3 +324,12 @@ msgid ""
 "connected to the arrangement entity by a relationship statement with "
 "interest type 'board member'."
 msgstr ""
+"Schéma représentant les déclarations reliées. La déclaration d'entité "
+"contient le champ entityType dont le type est configuré sur 'arrangement' "
+"(construction juridique) et le sous-type sur 'nomination' (mandat). L'entité"
+" de la construction juridique est reliée à une déclaration de personne par "
+"une déclaration de relation avec le type de participation au capital "
+"configuré sur 'nominee' (mandataire). Une deuxième déclaration d'entité avec"
+" le type \"Registered entity\" est reliée à l'entité de la construction "
+"juridique par une déclaration de relation avec le type de participation au "
+"capital configuré sur 'board member' (membre de conseil d'administration)."
