--- a/docs/locale/fr/LC_MESSAGES/about/index.po
+++ b/docs/locale/fr/LC_MESSAGES/about/index.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Cécile Guarin, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,23 +23,29 @@ msgstr ""
 
 #: ../../about/index.rst:4 72de4448857843dd87c200ac6457c3e4
 msgid "About"
-msgstr ""
+msgstr "À propos"
 
 #: ../../about/index.rst:6 d398f8b363894099871ac679403333b6
 msgid ""
 "This website contains the specification of version 0.4 of the Beneficial "
 "Ownership Data Standard (BODS) and support for its use."
 msgstr ""
+"Ce site web décrit les spécifications de la version 0.4 de la norme de "
+"données sur la propriété effective (« Beneficial Ownership Data Standard » "
+"ou BODS) et les mesures en faveur de son utilisation."
 
 #: ../../about/index.rst:8 d4726f521bcf404697719e63ac2a5167
 msgid ""
 "BODS is an open standard for collecting, sharing and using high-quality, "
 "machine-readable data on beneficial ownership."
 msgstr ""
+"La norme BODS est une norme ouverte régissant la collecte, le partage et "
+"l'utilisation des données sur la propriété effective de qualité supérieure "
+"qui sont fournies dans un format lisible par une machine."
 
 #: ../../about/index.rst:22 74f69d57e5fc4cec93b4478b8b946206
 msgid "Background"
-msgstr ""
+msgstr "Contexte"
 
 #: ../../about/index.rst:28 b3fa9c5069584d9d8e7a120506729b4f
 msgid ""
@@ -47,6 +57,15 @@ msgid ""
 "transparency policy goals such as exposing transnational networks of illicit"
 " financial flows or supporting effective and timely due diligence."
 msgstr ""
+"La collecte, le stockage et la mise à disposition des informations sur la "
+"propriété effective en tant que `données structurées et interopérables "
+"<https://www.openownership.org/en/principles/structured-data/>`__ en "
+"améliorent la fonctionnalité. Les coûts de génération, d'utilisation et de "
+"conservation des informations sont réduits. En outre, les objectifs de la "
+"politique sur la transparence de la propriété effective sont bien plus "
+"susceptibles d'être atteints, notamment l'exposition des réseaux "
+"transnationaux de flux financiers illégaux ou des vérifications préalables "
+"efficaces réalisées en temps opportuns."
 
 #: ../../about/index.rst:30 81b051aa177745ed8df2b4f85c595e43
 msgid ""
@@ -54,6 +73,10 @@ msgid ""
 " practical framework for collecting and publishing beneficial ownership "
 "data, resulting in data that is interoperable and high quality."
 msgstr ""
+"La norme BODS favorise la transparence de la propriété effective en "
+"fournissant un cadre conceptuel et pratique pour la collecte et la "
+"communication des données sur la propriété effective, ce qui permet de "
+"bénéficier d'informations interopérables et de qualité supérieure."
 
 #: ../../about/index.rst:32 c2f8d84a7f194819859642f9d486ace2
 msgid ""
@@ -61,6 +84,10 @@ msgid ""
 "non-profit organisation focused on beneficial ownership transparency, in "
 "partnership with `Open Data Services <https://opendataservices.coop/>`__."
 msgstr ""
+"La norme BODS est développée par `Open Ownership "
+"<https://www.openownership.org/>`__, une organisation à but non lucratif "
+"orientée vers la transparence de la propriété effective, en partenariat avec"
+" `Open Data Services <https://opendataservices.coop/>`__."
 
 #: ../../about/index.rst:34 00698e4daf744a07834a97c48d542f4b
 msgid ""
@@ -68,10 +95,14 @@ msgid ""
 "beneficial ownership specialists and other interested parties also provides "
 "advice and helps guide the development of BODS."
 msgstr ""
+"En outre, un :any:`groupe de travail ouvert sur la norme <working-group>` "
+"rassemblant des spécialistes des données et de la propriété effective, mais "
+"aussi d'autres parties intéressées fournit des conseils et oriente le "
+"développement de la norme BODS."
 
 #: ../../about/index.rst:40 d1212e7b4cad4498a44ffaecda5427d6
 msgid "Current status of the standard"
-msgstr ""
+msgstr "État actuel de la norme"
 
 #: ../../about/index.rst:46 d2c970705960477ba989f77ec926baf9
 msgid ""
@@ -79,6 +110,9 @@ msgid ""
 "documented in the :ref:`changelog <changelog>`, and the documentation of "
 "previous versions is maintained in archive form."
 msgstr ""
+"Voici la version 0.4 de la norme BODS. Les modifications apportées sont "
+"documentées dans :ref:`le journal des modifications <changelog>` et les "
+"versions précédentes sont conservées sous forme d'archives."
 
 #: ../../about/index.rst:48 16777f2b89084c8f859d87488d458a89
 msgid ""
@@ -87,6 +121,10 @@ msgid ""
 "changes or major definitional changes will only take place following "
 "consultation."
 msgstr ""
+"Il convient de noter que d'autres modifications devraient être apportées "
+"avant le lancement de la version 1.0. Or, depuis le lancement de la "
+"version 0.1, toute modification structurelle ou définitionnelle importante "
+"ne peut être apportée qu'après consultation."
 
 #: ../../about/index.rst:50 63e852eb90cb4a2aa6b0dd1bac40e2dc
 msgid ""
@@ -97,16 +135,27 @@ msgid ""
 "into the schema can be checked using the Data Review Tool. See "
 ":ref:`Conformance and validation <conformance>` for more information."
 msgstr ""
+"Le `schéma "
+"<https://standard.openownership.org/en/latest/schema/index.html>`__ contient"
+" une structure, des champs et des listes de code. Le cas échéant, les "
+"contraintes de validation sont incluses dans le schéma JSON. Il est possible"
+" de vérifier les éventuelles contraintes ne pouvant pas être intégrées dans "
+"le schéma à l'aide de l'outil d'étude des données. Consultez la section "
+":ref:`Conformité et validation <conformance>` pour obtenir des informations "
+"complémentaires."
 
 #: ../../about/index.rst:56 a105a121fb29466d9a7e2a9e4207db75
 msgid "Get involved"
-msgstr ""
+msgstr "Participation"
 
 #: ../../about/index.rst:62 30f9b85f5b12467f8700144eb96ad4ed
 msgid ""
 "All changes to the standard draft, documentation and specification take "
 "place via GitHub at https://github.com/openownership/data-standard/."
 msgstr ""
+"Toutes les modifications apportées à l'ébauche de la norme, à la "
+"documentation et aux spécifications s'effectuent sur la page "
+"https://github.com/openownership/data-standard/ de GitHub."
 
 #: ../../about/index.rst:65 1ae44d5c49bc4180a44854c107b848a2
 msgid ""
@@ -114,6 +163,10 @@ msgid ""
 "<https://github.com/openownership/data-standard/projects/4>`__ which "
 "documents all new BODS features being researched, proposed or implemented."
 msgstr ""
+"Un `outil de suivi des fonctionnalités est disponible sur GitHub "
+"<https://github.com/openownership/data-standard/projects/4>`__. Il documente"
+" l'ensemble des nouvelles fonctionnalités de la norme BODS qui sont "
+"recherchées, suggérées ou mises en œuvre."
 
 #: ../../about/index.rst:67 925fee92ce23478cbb51dc890e40f04e
 msgid ""
@@ -122,10 +175,15 @@ msgid ""
 "be involved in the development and review of the Standard, see the "
 ":doc:`Governance <governance>` page."
 msgstr ""
+"Toute personne peut soumettre une demande de fonctionnalité ou un rapport "
+"d'erreur, contribuer aux tickets de développement des fonctionnalités ou "
+"formuler des suggestions quant à la mise en œuvre. Si vous souhaitez "
+"participer au développement et à la révision de la norme, consultez la page "
+":doc:`Gouvernance <governance>`."
 
 #: ../../about/index.rst:73 87911b42591a499987c2c61d39d31569
 msgid "Partners and funders"
-msgstr ""
+msgstr "Partenaires et bailleurs de fonds"
 
 #: ../../about/index.rst:79 d7d49e58644345f6b8a81f2479f6bb02
 msgid ""
@@ -138,6 +196,16 @@ msgid ""
 "development-office>`__ and the `Norwegian Agency for Development Cooperation"
 " (Norad) <https://www.norad.no/en/front/>`__."
 msgstr ""
+"Le développement initial de la norme BODS a été financé par Open Ownership "
+"dans le cadre d'un projet soutenu par `le département du Développement "
+"international du Royaume-Uni (« Department for International Development » "
+"ou DfID) <https://www.gov.uk/government/organisations/department-for-"
+"international-development>`__ . Son développement est toujours financé par "
+"`le bureau des Affaires étrangères et du Commonwealth du Royaume-Uni "
+"(« Foreign, Commonwealth and Development Office ») "
+"<https://www.gov.uk/government/organisations/foreign-commonwealth-"
+"development-office>`__ et `l'agence norvégienne de la coopération pour le "
+"développement (Norad) <https://www.norad.no/en/front/>`__."
 
 #: ../../about/index.rst:81 95bec3356d2341f0a71220ecf05d8027
 msgid ""
@@ -147,6 +215,12 @@ msgid ""
 "executive team who are overseen by a Steering Group made up of leading "
 "transparency and accountability organisations."
 msgstr ""
+"`Open Ownership <https://www.openownership.org/en/>`__ est une organisation "
+"à but non lucratif visant à contribuer au mouvement mondial vers la "
+"transparence et la responsabilisation dans le cadre du contrôle et de la "
+"propriété des entreprises. Elle est gérée par une équipe dirigeante qui est "
+"supervisée par un groupe de pilotage composé de grands organismes impliqués "
+"dans les domaines de la transparence et de la responsabilisation."
 
 #: ../../about/index.rst:83 e154220caf4d4b18927ec9df3164272e
 msgid ""
@@ -157,6 +231,12 @@ msgid ""
 "without needing to complete the full process of establishing a new legal "
 "entity."
 msgstr ""
+"Afin de pouvoir se concentrer sur sa mission, Open Ownership bénéficie du "
+"parrainage fiscal de `Global Impact <https://charity.org>`__. Le `parrainage"
+" fiscal <https://charity.org/fiscal-sponsorship>`__ est un outil souvent "
+"utilisé dans le secteur des organisations à but non lucratif afin de les "
+"aider à lancer de nouveaux programmes sans devoir créer une nouvelle entité "
+"juridique."
 
 #: ../../about/index.rst:85 883875af9ccf40e2915b458d26abf466
 msgid ""
@@ -165,10 +245,15 @@ msgid ""
 "<https://opencorporates.com/>`__. Read the :doc:`credits <credits>` for full"
 " details of the people who have helped develop BODS."
 msgstr ""
+"Les spécifications et la documentation de la norme BODS ont été développées "
+"par Open Ownership, Open Data Services et `OpenCorporates "
+"<https://opencorporates.com/>`__. Lisez la section :doc:`Crédits <credits>` "
+"pour connaître la liste des personnes ayant participé au développement de la"
+" norme BODS."
 
 #: ../../about/index.rst:92 2c9c8f295b014a258ba45fab128c5b75
 msgid "License and contributor agreement"
-msgstr ""
+msgstr "Contrat de licence et de contribution"
 
 #: ../../about/index.rst:98 5fb7cc1e64914273a286dd954587ad89
 msgid ""
@@ -176,6 +261,9 @@ msgid ""
 "Affero General Public License v3.0 "
 "<https://github.com/openownership/register/blob/master/LICENSE>`__."
 msgstr ""
+"Le contenu du schéma du registre d'Open Ownership est publié dans le cadre "
+"de la `licence publique GNU Affero General Public License v3.0 "
+"<https://github.com/openownership/register/blob/master/LICENSE>`__."
 
 #: ../../about/index.rst:100 1b016f5d6816472088c534f47e27860d
 msgid ""
@@ -186,13 +274,23 @@ msgid ""
 "`contributor agreement <https://github.com/openownership/data-"
 "standard/blob/master/CONTRIBUTING.md>`__."
 msgstr ""
+"Le schéma de la norme BODS est régi par la `license Apache, version 2.0 "
+"<https://www.apache.org/licenses/LICENSE-2.0>`__. Les parties prenantes "
+"peuvent utiliser le logiciel à toutes fins, le distribuer, le modifier et en"
+" distribuer des versions modifiées. Les personnes apportant une contribution"
+" doivent accepter le `contrat de contribution "
+"<https://github.com/openownership/data-"
+"standard/blob/master/CONTRIBUTING.md>`__."
 
 #: ../../about/index.rst:109 12154d94a6ac46af8fef1b3089e34817
 msgid "Contact"
-msgstr ""
+msgstr "Contact"
 
 #: ../../about/index.rst:115 ef2f4a0e1c87484eab45259edce62fa0
 msgid ""
 "To contact the data standard support team at Open Ownership, please email "
 "support@openownership.org."
 msgstr ""
+"Pour contacter l'équipe d'Open Ownership chargée de l'assistance liée à la "
+"norme de données, veuillez lui envoyer un e-mail à l'adresse "
+"support@openownership.org."
