--- a/docs/locale/fr/LC_MESSAGES/about/privacy-notice.po
+++ b/docs/locale/fr/LC_MESSAGES/about/privacy-notice.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Cécile Guarin, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,10 +23,13 @@ msgstr ""
 
 #: ../../about/privacy-notice.rst:2 3e6fb0df72564349aec011ef4e14441d
 msgid "Privacy Notice"
-msgstr ""
+msgstr "Politique de confidentialité"
 
 #: ../../about/privacy-notice.rst:4 d8100a603ba3483bbfc219d4bd7f3869
 msgid ""
 "Open Ownership's full privacy notice, covering all of our services, can be "
 "found at https://openownership.org/privacy on our main website"
 msgstr ""
+"L'intégralité de la politique de confidentialité d'Open Ownership concernant"
+" l'ensemble de nos services est disponible sur la page "
+"https://openownership.org/privacy de notre site web."
