--- a/docs/locale/fr/LC_MESSAGES/index.po
+++ b/docs/locale/fr/LC_MESSAGES/index.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Cécile Guarin, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
+"Last-Translator: Cécile Guarin, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +23,7 @@ msgstr ""
 
 #: ../../index.rst:2 fc13bceebec2410c8e7da1650e465254
 msgid "Beneficial Ownership Data Standard (v0.4)"
-msgstr ""
+msgstr "Norme de données sur la propriété effective (version 0.4)"
 
 #: ../../index.rst:4 bcdb8d77de3240b5baa001a40c5abd3d
 msgid ""
@@ -27,6 +31,10 @@ msgid ""
 "guidance for collecting, sharing and using high-quality beneficial ownership"
 " data."
 msgstr ""
+"La norme de données sur la propriété effective (« Beneficial Ownership Data "
+"Standard » ou BODS) est une norme ouverte fournissant des conseils quant à "
+"la collecte, au partage et à l'utilisation de données sur la propriété "
+"effective de qualité supérieure."
 
 #: ../../index.rst:6 be031c1dc1de4bcaa66bffd88cb94668
 msgid ""
@@ -36,55 +44,66 @@ msgid ""
 "Find out more about the :doc:`governance of BODS <../about/governance>` and "
 "how to get involved."
 msgstr ""
+"Elle est développée par `Open Ownership <https://www.openownership.org/>`_, "
+"une organisation à but non lucratif orientée vers la transparence de la "
+"propriété effective, en partenariat avec `Open Data Services "
+"<https://opendataservices.coop/>`_. Pour en savoir plus à ce sujet et "
+"découvrir comment participer à la procédure, consultez la section dédiées à "
+":doc:`la gouvernance de la norme BODS <../about/governance>`."
 
 #: ../../index.rst:12 7739934b9f874808beded5af7cecba37
 msgid "Introduction"
-msgstr ""
+msgstr "Introduction"
 
 #: ../../index.rst:14 343e893d4203453f9c519acaee081119
 msgid ""
 "Learn about beneficial ownership and why a standardised format for data is "
 "important."
 msgstr ""
+"Obtenez des informations supplémentaires sur la propriété effective et "
+"découvrez pourquoi un format normalisé des données est important."
 
 #: ../../index.rst:18 66a86c7baa804b929aaa415db155db3e
 msgid ":ref:`What is beneficial ownership? <primer>`"
-msgstr ""
+msgstr ":ref:`Qu'est-ce que la propriété effective ? <primer>`"
 
 #: ../../index.rst:22 85dfef5cf3824d3ab341ee16465a3b28
 msgid ":ref:`What is the data standard? <whatisbods>`"
-msgstr ""
+msgstr ":ref:`Qu'est-ce que la norme de données ? <whatisbods>`"
 
 #: ../../index.rst:26 f3879e8d222740548009cab83cfa2fb1
 msgid ":ref:`About the standard's development <about>`"
-msgstr ""
+msgstr ":ref:`À propos du développement de la norme <about>`"
 
 #: ../../index.rst:30 a573902516874d6c910ef104fb8629f6
 msgid ""
 "`Open Ownership's work, team and purpose "
 "<https://www.openownership.org/en/about/>`_"
 msgstr ""
+"`Le travail, l'équipe et la mission d'Open Ownership "
+"<https://www.openownership.org/en/about/>`_"
 
 #: ../../index.rst:37 704368b0b86949e89d71b4dff5107a86
 msgid "For Developers"
-msgstr ""
+msgstr "Pour les développeurs"
 
 #: ../../index.rst:39 112a08938c1a4fffa55f657e1ee94707
 msgid "Understand how to package up and release beneficial ownership data."
 msgstr ""
+"Apprenez à présenter et à fournir des données sur la propriété effective."
 
 #: ../../index.rst:43 1b4bc18d796a4789912aaa35c7d666dd
 msgid ":ref:`Key Concepts <key-concepts>`"
-msgstr ""
+msgstr ":ref:`Principaux concepts <key-concepts>`"
 
 #: ../../index.rst:47 fc9de6820145423f88cc6b492e87f101
 msgid ":ref:`Modelling requirements  <modelling-requirements>`"
-msgstr ""
+msgstr ":ref:`Exigences relatives à la modélisation <modelling-requirements>`"
 
 #: ../../index.rst:51 310da8c541ba4a7597ddc9149f955f6b
 msgid ":ref:`Schema browser <schema-browser>`"
-msgstr ""
+msgstr ":ref:`Navigateur du schéma <schema-browser>`"
 
 #: ../../index.rst:55 635fe9d295bb42c6b14c5d13413302a2
 msgid ":ref:`System requirements <system-requirements>`"
-msgstr ""
+msgstr ":ref:`Exigences relatives aux systèmes <system-requirements>`"
