--- a/docs/locale/fr/LC_MESSAGES/standard/concepts.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/concepts.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Katia Da Silva, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Katia Da Silva, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,9 +41,9 @@ msgid ""
 ":ref:`Changelog <changelog>` and `About <../about>`_ pages for more "
 "information."
 msgstr ""
-"Des modifications ultérieures sont anticipées avant le lancement de la "
-"version 1.0. Voir les pages :ref:`Changelog <changelog>` et `About "
-"<../about>`_ pour plus d'informations."
+"Des modifications ultérieures sont prévues avant le lancement de la version "
+"1.0. Voir les pages :ref:`Journal des modifications <changelog>` et `À "
+"propos <../about>`_ pour plus d'informations."
 
 #: ../../standard/concepts.rst:8 43e2058798794399add75035598fa4c5
 msgid ""
@@ -86,7 +87,7 @@ msgstr ""
 " ou de l'utilisation de ses actifs. La **relation** entre le bénéficiaire "
 "effectif et l'entité peut être **directe**, **indirecte** ou les deux. "
 "Lorsqu'elle est indirecte, les entités **intermédiaires**, les personnes et "
-"leurs relations font partie du **réseau de la propriété effective**."
+"leurs relations font partie du **réseau des bénéficiaires effectifs**."
 
 #: ../../standard/concepts.rst:21 b565f8eaefa44df2bcde2f311c5672da
 msgid ""
@@ -100,10 +101,10 @@ msgstr ""
 "Dans certaines juridictions, les personnes ou les entités ont l'obligation "
 "de divulguer leur propriété effective auprès d'un organisme désigné. Chaque "
 "**déclaration** est constituée d'un ensemble d'**affirmations** à propos des"
-" entités, des personnes et des relations au sein du réseau de propriété "
-"effective du **sujet**. L'organisme saisit ces informations sur ces entités,"
-" personnes et relations dans des **dossiers** mis à jour au fur et à mesure "
-"des nouvelles affirmations."
+" entités, des personnes et des relations au sein du réseau des bénéficiaires"
+" effectifs du **sujet**. L'organisme saisit ces informations sur ces "
+"entités, personnes et relations dans des **enregistrements** mis à jour au "
+"fur et à mesure des nouvelles affirmations."
 
 #: ../../standard/concepts.rst-1 2c90747a9cc3417aaced34d23fe8e5d7
 msgid ""
@@ -117,16 +118,17 @@ msgid ""
 "dotted line. Person 1 is labelled 'Beneficial owner'. Company A is labelled "
 "'Intermediary entity'."
 msgstr ""
-"Diagramme étiqueté d'un réseau de propriété effective. La Société E est "
-"étiquetée comme 'Sujet du réseau de propriété effective'. Une ligne continue"
-" reliée à la Personne 2 est étiquetée 'Relation directe'. Le texte 'taux de "
-"détention d'actions de 32 %' situé sur cette ligne continue est étiqueté "
-"'Intérêt'. La Société E est également reliée à la Société A par une ligne "
-"continue. La Société A est reliée à la Personne 1 par une ligne continue. "
-"Une ligne en pointillés reliant la Société E et la Personne 1 est étiquetée "
-"'Relation indirecte'. Le texte 'taux de détention d'actions de 45 %' est "
-"situé sur cette ligne en pointillés. La Personne 1 est étiquetée "
-"'Bénéficiaire effectif'. La Société A est étiquetée 'Entité intermédiaire'."
+"Diagramme étiqueté d'un réseau des bénéficiaires effectifs. La Société E est"
+" étiquetée comme 'Sujet du réseau des bénéficiaires effectifs'. Une ligne "
+"continue reliée à la Personne 2 est étiquetée 'Relation directe'. Le texte "
+"'taux de détention d'actions de 32 %' situé sur cette ligne continue est "
+"étiqueté 'Participation au capital'. La Société E est également reliée à la "
+"Société A par une ligne continue. La Société A est reliée à la Personne 1 "
+"par une ligne continue. Une ligne en pointillés reliant la Société E et la "
+"Personne 1 est étiquetée 'Relation indirecte'. Le texte 'taux de détention "
+"d'actions de 45 %' est situé sur cette ligne en pointillés. La Personne 1 "
+"est étiquetée 'Bénéficiaire effectif'. La Société A est étiquetée 'Entité "
+"intermédiaire'."
 
 #: ../../standard/concepts.rst:30 11ea0869dcb542cc81f29a7b83cfafd5
 msgid "BODS Statements represent claims"
@@ -141,7 +143,7 @@ msgstr ""
 "La déclaration est l'objet de niveau le plus élevé dans un ensemble de "
 "données de la BODS. Chaque déclaration représente une affirmation réalisée "
 "par une source à un moment donné dans le temps. L'affirmation peut porter "
-"sur l'un des trois éléments d'un réseau de propriété effective :"
+"sur l'un des trois éléments d'un réseau de bénéficiaires effectifs :"
 
 #: ../../standard/concepts.rst:34 991ffdd79225451cb62e6d301ae6cc8b
 msgid "an entity (including companies, trusts and legal arrangements)"
@@ -234,7 +236,7 @@ msgid ""
 "records in the system"
 msgstr ""
 "les détails affirmés à propos de l'entité, de la personne ou de la relation "
-"tels que consignés par les dossiers dans le système ;"
+"tels que consignés par les enregistrements dans le système ;"
 
 #: ../../standard/concepts.rst:54 fd3cf203722a4f379ab9553ec75190a4
 msgid "information about the source, date and context of the claim"
@@ -249,7 +251,7 @@ msgid ""
 msgstr ""
 "Après publication, les éditeurs n'apportent aucune modification à une "
 "déclaration afin d'indiquer une mise à jour des informations : ils publient "
-"une nouvelle déclaration avec les détails actualisés du dossier."
+"une nouvelle déclaration avec les détails actualisés de l'enregistrement."
 
 #: ../../standard/concepts.rst:60 dd8611046a6b4f9aac88e2b9b0096e51
 msgid "Beneficial ownership records"
@@ -290,8 +292,8 @@ msgid ""
 "beneficial ownership networks to be derived from BODS datasets."
 msgstr ""
 "Grâce aux valeurs ``recordId`` stables contenues dans les déclarations de la"
-" BODS, la structure des réseaux de propriété effective peut reposer sur des "
-"ensembles de données de la BODS."
+" BODS, la structure des réseaux de bénéficiaires effectifs peut reposer sur "
+"des ensembles de données de la BODS."
 
 #: ../../standard/concepts.rst-1 7ec38efdaa834110bcb6ff3e55a42c77
 msgid ""
@@ -316,12 +318,12 @@ msgstr ""
 "est 'personne', le recordId est 'p24d78ae012f1', et les recordDetails "
 "précisent que le nom de la personne est 'Lev Yotsky'. Dans la déclaration de"
 " relation, le recordType est 'relation' et les recordDetails indiquent que "
-"l'interestedParty est le dossier avec le recordId 'p24d78ae012f1' et le "
-"sujet est le dossier avec le recordId 'e3f199ad8e312'. Dans la déclaration "
-"d'entité, le recordType est 'entité', le recordId est 'e3f199ad8e312' et les"
-" recordDetails précisent que le nom de l'entité, 'White Flag Holdings Corp'."
-" Ces éléments représentent la relation de Lev Yotsky avec Flag Holdings "
-"Corp."
+"l'interestedParty est l'enregistrement avec le recordId 'p24d78ae012f1' et "
+"le sujet est l'enregistrement avec le recordId 'e3f199ad8e312'. Dans la "
+"déclaration d'entité, le recordType est 'entité', le recordId est "
+"'e3f199ad8e312' et les recordDetails précisent que le nom de l'entité, "
+"'White Flag Holdings Corp'. Ces éléments représentent la relation de Lev "
+"Yotsky avec Flag Holdings Corp."
 
 #: ../../standard/concepts.rst:79 d13f9a8c36154ff4b31e6b4a74878c5b
 msgid ""
@@ -344,9 +346,10 @@ msgid ""
 msgstr ""
 "À mesure que la propriété effective évolue, les agents transmettent des "
 "informations actualisées sur les personnes, les entités et les relations au "
-"système de gestion des données. Ensuite, le système met à jour ses dossiers "
-"en conséquence et publie une nouvelle déclaration BODS contenant le "
-"``recordId`` correspondant, pour chaque dossier mis à jour."
+"système de gestion des données. Ensuite, le système met à jour ses "
+"enregistrements en conséquence et publie une nouvelle déclaration BODS "
+"contenant le ``recordId`` correspondant, pour chaque enregistrement mis à "
+"jour."
 
 #: ../../standard/concepts.rst:86 9824b85fb24f473397c9423a6562f77b
 msgid ""
@@ -447,10 +450,10 @@ msgid ""
 "the data model in full. Read the :any:`Schema reference <schema-reference>` "
 "for detailed definitions and requirements for each object and field."
 msgstr ""
-"Utilisez le :doc:`Schema browser <schema-browser>` pour explorer la "
-"structure du modèle de données dans son intégralité. Lisez la :any:`Schema "
-"reference <schema-reference>` pour voir les définitions précises et les "
-"conditions requises de chaque objet et de chaque champ."
+"Utilisez le :doc:`Navigateur du schéma <schema-browser>` pour explorer la "
+"structure du modèle de données dans son intégralité. Lisez la "
+":any:`Référence du schéma <schema-reference>` pour voir les définitions "
+"précises et les exigences relatives à chaque objet et à chaque champ."
 
 #: ../../standard/concepts.rst:113 761f06f84d764ee3b84290245c495fb9
 msgid ""
