--- a/docs/locale/fr/LC_MESSAGES/standard/modelling/languages.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/modelling/languages.po
@@ -3,6 +3,10 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Cécile Guarin, 2024
+# Rachel Vint, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +24,7 @@ msgstr ""
 
 #: ../../standard/modelling/languages.rst:2 8a42b55124a641859a156f212f26f350
 msgid "Representing alternative languages"
-msgstr ""
+msgstr "Représentation des langues alternatives"
 
 #: ../../standard/modelling/languages.rst:4 a0fe30292611498281cc9335168a0cf8
 msgid ""
@@ -27,47 +32,60 @@ msgid ""
 "languages or scripts. BODS provides options for representing translated or "
 "transliterated information."
 msgstr ""
+"Il peut être nécessaire de fournir les information sur les bénéficiaires "
+"effectifs dans des langues ou des scripts différents. La norme BODS propose "
+"des alternatives pour la représentation des informations traduites ou "
+"transcrites."
 
 #: ../../standard/modelling/languages.rst:6 c6c1c406cbf3439abcfe54c2e88ef5b7
 msgid "To represent:"
-msgstr ""
+msgstr "Pour représenter :"
 
 #: ../../standard/modelling/languages.rst:8 6382fbedc1c549b2b6b398b1b7cfda0b
 msgid ""
 "people’s names, use an entry in the names array with ``name.type`` "
 "‘translation’ or ‘transliteration’"
 msgstr ""
+"les noms des personnes, utilisez une entrée dans le tableau contenant le "
+"champ ``name.type`` configuré sur ‘translation’ ou ‘transliteration’ ;"
 
 #: ../../standard/modelling/languages.rst:10 413423e90b43493f9ce5398af9eec3ae
 msgid "entity names, use an entry in the ``alternativeNames`` array"
 msgstr ""
+"les noms des entités, utilisez une entrée dans le tableau "
+"``alternativeNames`` ;"
 
 #: ../../standard/modelling/languages.rst:12 aa9004b279db476a90a2488d75fadf12
 msgid "entity types use ``entityType.details``"
-msgstr ""
+msgstr "les types d'entités, utilisez ``entityType.details`` ;"
 
 #: ../../standard/modelling/languages.rst:14 b6e3e248430b430f81de86d6dc6bc96e
 msgid "interest types use ``interest.details``"
 msgstr ""
+"les types de participations au capital, utilisez ``interest.details``."
 
 #: ../../standard/modelling/languages.rst:16 af6152cc36894ae5b87cc55cdb6247ca
 msgid "For other fields or entire records, use an annotation."
 msgstr ""
+"Pour les autres champs et les enregistrements complets, utilisez une "
+"annotation."
 
 #: ../../standard/modelling/languages.rst:18 3baabe77bc16490e8db6ca15b90b66fe
 msgid "In the annotation:"
-msgstr ""
+msgstr "Dans l'annotation :"
 
 #: ../../standard/modelling/languages.rst:20 dd0d2e55cdbd436fbb60124a4bbcb4cc
 msgid "``motivation`` MUST be ‘transformation’"
-msgstr ""
+msgstr "``motivation`` doit être configuré sur ‘transformation’ ;"
 
 #: ../../standard/modelling/languages.rst:22 548ad5151e9e489fb87c89880ad8461b
 msgid ""
 "``description`` SHOULD explain the type of transformation (e.g. "
 "‘translation’)"
 msgstr ""
+"``description`` doit expliquer le type de transformation (par ex., "
+"‘translation’) ;"
 
 #: ../../standard/modelling/languages.rst:24 b957053c6b7a43e49105b321cdd4d71b
 msgid "``transformedContent`` MUST contain the transformed content"
-msgstr ""
+msgstr "``transformedContent`` doit inclure le contenu transformé."
