--- a/docs/locale/fr/LC_MESSAGES/standard/system/serialisation.po
+++ b/docs/locale/fr/LC_MESSAGES/standard/system/serialisation.po
@@ -3,6 +3,10 @@
 # This file is distributed under the same license as the Beneficial Ownership Data Standard package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Rachel Vint, 2024
+# Katia Da Silva, 2024
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
+"Last-Translator: Katia Da Silva, 2024\n"
 "Language-Team: French (https://app.transifex.com/OpenDataServices/teams/95583/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +24,7 @@ msgstr ""
 
 #: ../../standard/system/serialisation.rst:4 4c750127195940e9a32980b0478d1443
 msgid "Serialisation"
-msgstr ""
+msgstr "Sérialisation"
 
 #: ../../standard/system/serialisation.rst:6 ee8951fdaee8484cb116fedcc701d891
 msgid ""
@@ -29,36 +34,51 @@ msgid ""
 "international.org/publications-and-standards/standards/ecma-404/>`_. It is "
 "RECOMMENDED that publishers:"
 msgstr ""
+"La sérialisation canonique des données de la BODS se présente sous la forme "
+"d'un document JSON. `IETF RFC 8256 <https://tools.ietf.org/html/rfc8259>`_ "
+"et `ECMA 404 <https://ecma-international.org/publications-and-"
+"standards/standards/ecma-404/>`_ fournissent des spécifications équivalentes"
+" de JSON. Les éditeurs sont invités à suivre les RECOMMANDATIONS suivantes :"
 
 #: ../../standard/system/serialisation.rst:8 ad1e87e89b64411dafd22e0038cc28f3
 msgid "Use UTF-8 for maximal interoperability (section 8.1 of RFC 8259);"
 msgstr ""
+"utiliser UTF-8 pour une interopérabilité maximale (section 8.1 de RFC 8259) "
+";"
 
 #: ../../standard/system/serialisation.rst:9 66beb6f4868c402c934039d57a171c5a
 msgid ""
 "Escape characters that might cause problems when ingesting data (for "
 "example: &, <)."
 msgstr ""
+"échapper les caractères qui pourraient causer des problèmes lors de "
+"l'ingestion des données (par exemple : &, <)."
 
 #: ../../standard/system/serialisation.rst:11 cd6abb160e9c45eb80dd06b15214540b
 msgid ""
 "See Section 9 of the ECMA-404 JSON specification which deals with strings, "
 "encoding and escaping."
 msgstr ""
+"Voir la section 9 de la spécification ECMA-404 JSON sur les chaînes, "
+"l'encodage et l'échappement."
 
 #: ../../standard/system/serialisation.rst:13 525e23c6c47048faa38b7ac93413f444
 msgid "JSON Lines MAY also be used when creating large files."
 msgstr ""
+"Les lignes JSON PEUVENT également être utilisées pour la création de grands "
+"fichiers."
 
 #: ../../standard/system/serialisation.rst:16 61045d7036fa4373af813ed17cab0719
 msgid "Statement order"
-msgstr ""
+msgstr "Ordre de la déclaration"
 
 #: ../../standard/system/serialisation.rst:18 f561d0b9d8e54b699f04e56265443c8a
 msgid ""
 "A JSON BODS file MUST consist of a series of ordered Statement objects "
 "within a top-level array."
 msgstr ""
+"Un fichier BODS JSON DOIT être composé d'une série d'objets de déclaration "
+"ordonnés dans un tableau de niveau supérieur."
 
 #: ../../standard/system/serialisation.rst:20 40209926298e4b2c9b4fabedc9d904e2
 msgid ""
@@ -66,10 +86,14 @@ msgid ""
 "Relationship statement, when they are a ``recordId`` value, MUST match the "
 "``recordId`` value of at least one other *prior* Statement in the array."
 msgstr ""
+"En particulier, les valeurs ``interestedParty`` et ``subject`` d'une "
+"déclaration de relation, s'il s'agit d'une valeur ``recordId``, DOIVENT "
+"correspondre à la valeur ``recordId`` d'au moins une autre déclaration "
+"*précédente* dans un tableau."
 
 #: ../../standard/system/serialisation.rst:23 0254084d4f4b4ea299b8ef5c3f41774d
 msgid "Alternative tabular form"
-msgstr ""
+msgstr "Autre forme de tableau"
 
 #: ../../standard/system/serialisation.rst:25 ca785821b78648069dbbfea00827f5f3
 msgid ""
@@ -77,83 +101,87 @@ msgid ""
 " a statement. Columns SHOULD represent statement fields and column titles "
 "SHOULD use the relevant relative JSON Pointer from the statement root."
 msgstr ""
+"Les données de la BODS PEUVENT également être sérialisées sous forme de "
+"tableau dont chaque rangée représente une déclaration. Les colonnes "
+"DEVRAIENT représenter les champs de déclaration et les titres de colonne "
+"utiliser le JSON Pointer correspondant depuis la racine de la déclaration."
 
 #: ../../standard/system/serialisation.rst:27 c1a8fca361544a4ca7a30854967f1aef
 msgid "For example, the extract:"
-msgstr ""
+msgstr "Par exemple, l'extrait :"
 
 #: ../../standard/system/serialisation.rst:65 d002db0cc1ca47e8a4f481bccdb202db
 msgid "may be serialised in a table as:"
-msgstr ""
+msgstr "peut être sérialisé dans un tableau comme :"
 
 #: ../../standard/system/serialisation.rst:70 82206c161e1e4bfcbba1e9d4fd2437a1
 msgid "statementId"
-msgstr ""
+msgstr "statementId"
 
 #: ../../standard/system/serialisation.rst:71 4377a1b1fa184804a1f16769df07012d
 msgid "recordId"
-msgstr ""
+msgstr "recordId"
 
 #: ../../standard/system/serialisation.rst:72 129311366bb3432cbc0097c49387c2ed
 msgid "recordType"
-msgstr ""
+msgstr "recordType"
 
 #: ../../standard/system/serialisation.rst:73 32257f46c46d480ea7bd9609819bcb39
 msgid "recordDetails/identifiers/0/scheme"
-msgstr ""
+msgstr "recordDetails/identifiers/0/scheme"
 
 #: ../../standard/system/serialisation.rst:74 3e53ff059a3f409abacd23074eaa3be0
 msgid "recordDetails/identifiers/0/id"
-msgstr ""
+msgstr "recordDetails/identifiers/0/id"
 
 #: ../../standard/system/serialisation.rst:75 9a3a757d04324b96ab75617c1390ed78
 msgid "e3c07f34-1810-4eed-b845-4d9f4d97f9d5"
-msgstr ""
+msgstr "e3c07f34-1810-4eed-b845-4d9f4d97f9d5"
 
 #: ../../standard/system/serialisation.rst:76 7fd37ab5225043cc8429474f0e6ff29f
 msgid "1810-4eed-b845-4d9f4d97f9d5"
-msgstr ""
+msgstr "1810-4eed-b845-4d9f4d97f9d5"
 
 #: ../../standard/system/serialisation.rst:77 0ba3f8fa0c41486da99d1191769d046c
 msgid "entity"
-msgstr ""
+msgstr "entity"
 
 #: ../../standard/system/serialisation.rst:78 6edc27f180864e9089b6585527d8d4d2
 msgid "GB-COH"
-msgstr ""
+msgstr "GB-COH"
 
 #: ../../standard/system/serialisation.rst:79 6fbdc82218c84ddda5d0c40b2a7030a9
 msgid "07444723"
-msgstr ""
+msgstr "07444723"
 
 #: ../../standard/system/serialisation.rst:80 5d3c6acfae414567acec81b7a2f66488
 msgid "a2b485be-e3b6-4fd7-8a6a-930e46cf9957"
-msgstr ""
+msgstr "a2b485be-e3b6-4fd7-8a6a-930e46cf9957"
 
 #: ../../standard/system/serialisation.rst:81 d4cb412f1bd748c5bc94e703fed744b0
 msgid "e3b6-4fd7-8a6a-930e46cf9957"
-msgstr ""
+msgstr "e3b6-4fd7-8a6a-930e46cf9957"
 
 #: ../../standard/system/serialisation.rst:82 851669a37d50477897ab6e05bf190715
 msgid "person"
-msgstr ""
+msgstr "person"
 
 #: ../../standard/system/serialisation.rst:83 8fe6796597e74c3a812260cfc1447088
 msgid "MX-RFC"
-msgstr ""
+msgstr "MX-RFC"
 
 #: ../../standard/system/serialisation.rst:84 ecad9427591440aeaffa92eba41c4476
 msgid "ABC680524P-76"
-msgstr ""
+msgstr "ABC680524P-76"
 
 #: ../../standard/system/serialisation.rst:86 a4752cb5b8bc4bbfb75aab2564bfdbbc
 msgid "34b479f2-1681-4064-ab51-1e703fbafa"
-msgstr ""
+msgstr "34b479f2-1681-4064-ab51-1e703fbafa"
 
 #: ../../standard/system/serialisation.rst:87 074e9e913de546f09fe7eaa629ee9d66
 msgid "1681-4064-ab51-1e703fbafa"
-msgstr ""
+msgstr "1681-4064-ab51-1e703fbafa"
 
 #: ../../standard/system/serialisation.rst:88 4fe8e97689b9424f8211850f0e4d111c
 msgid "relationship"
-msgstr ""
+msgstr "relationship"
